--- a/.github/workflows/e2e_test_reusable.yml
+++ b/.github/workflows/e2e_test_reusable.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Install minimal runtime deps for headless browser
         run: |
           sudo apt-get update
-          sudo apt-get install -y dbus-x11 xvfb libgtk-3-0 libnss3 libxss1 libasound2 libgbm1
+          sudo apt-get install -y dbus-x11 xvfb libgtk-3-0 libnss3 libxss1 libasound2t64 libgbm1
 
       - name: Run Cypress (dbus-run-session)
         working-directory: frontend
