--- a/backend/ops_api/Pipfile
+++ b/backend/ops_api/Pipfile
@@ -40,6 +40,7 @@ pytest-docker = {extras = ["docker-compose-v2"], version = "==3.2.3"}
 pytest-flask = "==1.3.0"
 pytest-mock = "==3.15.1"
 ipython = "==9.6.0"
+locust = "==2.41.6"
 
 [requires]
 python_version = "3.12"
