--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
       - id: detect-private-key
       - id: trailing-whitespace
       - id: end-of-file-fixer
-        exclude: '^frontend/src/uswds/.*\.svg$'
+        exclude: '^frontend/src/uswds/.*(\.svg|\.map)$'
       - id: check-json
       - id: check-yaml
       - id: check-added-large-files
